2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	 include/styles/pandora.css
	 include/javascript/jquery.pandora.js
	 include/functions_config.php
	 extensions/update_manager.php
	 extensions/update_manager/load_updatemanager.php
	 extensions/update_manager/lib/functions.ajax.php
	 extensions/update_manager/settings.php
	 operation/system_alert.php
	 godmode/setup/setup.php: Changed layout in lincense model window 
	 and modified layout in setup view.

2012-04-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Stripped # character in a 
	string before converted it to image 3504479

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php
	  operation/menu.php
	  operation/tree/no_branch.png
	  operation/tree/branch.png
	  operation/tree/closed.png
	  operation/tree/expanded.png
	  operation/tree/first_closed.png
	  operation/tree/first_expanded.png
	  operation/tree/last_closed.png
	  operation/tree/last_expanded.png
	  operation/tree/last_leaf.png
	  operation/tree/leaf.png
	  operation/tree/one_closed.png
	  operation/tree/one_expanded.png. Changed path.

2012-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/fgraph.php
	include/functions_visual_map.php: Fixed minimum size of the
	area graphs to more pixels by security merged from trunk

2012-04-16  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php: Switched the visual console and custom reports
	order in the menu and change the main Reporting section link 
	to give more important to reports.

2012-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed minimum size on 
	dashboards graphs into visual maps widget and a ugly sql error 
	bug

2012-04-16  Vanessa Gil  <vanessa.gil@artica.es>

	* extensions/tree.php
	  extensions/tree/no_branch.png
	  extensions/tree/branch.png
	  extensions/tree/closed.png
	  extensions/tree/expanded.png
	  extensions/tree/first_closed.png